# Development-of-Rules-Based-Security-System-and-Intel-SGX

./: DECOMPILATION_README.md  README.md  decompilation_sample_code.cpp
Project/: Project.sln
Project/Debug/: Project.exe.metagen  Project.ilk
Project/Project/: Dictionary.cpp  Main.cpp  ParseFile.cpp  ParseFile.h  Project.vcxproj  Project.vcxproj.filters  RecursionHandle.cpp  RecursionHandle.h  SearchExe.cpp  SearchExe.h  StackOverrunAfter.cpp  StackOverrunBefor.cpp  test_befor.c
Project/Project/Debug/: .NETFramework,Version=v4.0.AssemblyAttributes.asm  vc140.idb
decompilation_project/: CMakeLists.txt  prog.cpp
final_project/: CMakeLists.txt  decompile.cpp
final_project/ConsoleApplication1/: ConsoleApplication1.vcxproj
final_project_release_mode/yy/: prog.cpp
final_project_release_mode/yy/Enclave1/: Enclave1.vcxproj
final_project_release_mode/yy/Secure_Functions/: ReadMe.txt  Secure_Functions.cpp  Secure_Functions.edl  Secure_Functions.vcxproj  (+4 more)
scanning/: Project3.sln
scanning/Debug/: Project3.ilk
scanning/Project3/: Access.cpp  Access.h  Project3.vcxproj  Project3.vcxproj.filters  Source.cpp
secure_functions/: StackOverrun.c  secure_functions.sln
secure_functions/Debug/: app.ilk  secure_functions.exp  secure_functions.lib
secure_functions/app/: CreateProcess.cpp  CreateProcess.h  app.cpp  app.vcxproj  app.vcxproj.filters  secure_functions_u.c  secure_functions_u.h
secure_functions/secure_functions/: secure_functions.edl  secure_functions.vcxproj  secure_functions.vcxproj.filters  secure_functions_private.pem  secure_functions_t.c
(+51 files in other folders)
